Counting Votes for Candidates and Asambleist - Front and Back

--- a/eVotingUI/kandidatet.html
+++ b/eVotingUI/kandidatet.html
@@ -73,13 +73,13 @@
 											<div class="header-tabs overflow-auto mx-4 ms-lg-10 mb-5 mb-lg-0" id="kt_header_tabs" data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_header_navs_wrapper', lg: '#kt_brand_tabs'}">
 												<ul class="nav flex-nowrap">
 													<li class="nav-item">
-														<a class="nav-link active" data-bs-toggle="tab" href="#kt_header_navs_tab_1">Anetaret</a>
+														<a class="nav-link" data-bs-toggle="tab" href="#kt_header_navs_tab_1">Anetaret</a>
 													</li>
 													<li class="nav-item">
 														<a class="nav-link" data-bs-toggle="tab" href="#kt_header_navs_tab_2">Partite</a>
 													</li>
 													<li class="nav-item">
-														<a class="nav-link" data-bs-toggle="tab" href="#kt_header_navs_tab_3">Votat</a>
+														<a class="nav-link active" data-bs-toggle="tab" href="#kt_header_navs_tab_3">Votat</a>
 													</li>
 												</ul>
 											</div>
@@ -123,7 +123,7 @@
 								<!--begin::Header tab content-->
 								<div class="tab-content" data-kt-scroll="true" data-kt-scroll-activate="{default: true, lg: false}" data-kt-scroll-height="auto" data-kt-scroll-offset="70px">
 									<!--begin::Tab panel-->
-									<div class="tab-pane fade active show" id="kt_header_navs_tab_1">
+									<div class="tab-pane fade" id="kt_header_navs_tab_1">
 										<!--begin::Menu wrapper-->
 										<div class="header-menu flex-column align-items-stretch flex-lg-row">
 											<!--begin::Menu-->
@@ -133,7 +133,7 @@
 														<span class="menu-title">Lista</span>
 													</a>
 												</div>
-												<div class="menu-item show menu-lg-down-accordion me-lg-1">
+												<div class="menu-item menu-lg-down-accordion me-lg-1">
 													<a href="shtoAnetare.html" class="menu-link py-3">
 														<span class="menu-title">Shto Anetare</span>
 													</a>
@@ -150,7 +150,7 @@
 										<div class="header-menu flex-column align-items-stretch flex-lg-row">
 											<!--begin::Menu-->
 											<div class="menu menu-lg-rounded menu-column menu-lg-row menu-state-bg menu-title-gray-700 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-400 fw-bold align-items-stretch flex-grow-1" id="#kt_header_menu" data-kt-menu="true">
-												<div class="menu-item show menu-lg-down-accordion me-lg-1">
+												<div class="menu-item menu-lg-down-accordion me-lg-1">
 													<a href="partite.html" class="menu-link py-3">
 														<span class="menu-title">Lista</span>
 													</a>
@@ -167,12 +167,12 @@
 									</div>
 									<!--end::Tab panel-->
 									<!--begin::Tab panel-->
-									<div class="tab-pane fade" id="kt_header_navs_tab_3">
+									<div class="tab-pane fade active show" id="kt_header_navs_tab_3">
 										<!--begin::Wrapper-->
 										<div class="header-menu flex-column align-items-stretch flex-lg-row">
 											<!--begin::Menu-->
 											<div class="menu menu-lg-rounded menu-column menu-lg-row menu-state-bg menu-title-gray-700 menu-state-title-primary menu-state-icon-primary menu-state-bullet-primary menu-arrow-gray-400 fw-bold align-items-stretch flex-grow-1" id="#kt_header_menu" data-kt-menu="true">
-												<div class="menu-item menu-lg-down-accordion me-lg-1">
+												<div class="menu-item show menu-lg-down-accordion me-lg-1">
 													<a href="kandidatet.html" class="menu-link py-3">
 														<span class="menu-title">Kandidatet</span>
 													</a>
@@ -184,37 +184,6 @@
 												</div>
 											</div>
 											<!--end::Menu-->
-										</div>
-										<!--end::Wrapper-->
-									</div>
-									<!--end::Tab panel-->
-									<!--begin::Tab panel-->
-									<div class="tab-pane fade" id="kt_header_navs_tab_4">
-										<!--begin::Wrapper-->
-										<div class="d-flex flex-column flex-lg-row flex-lg-stack flex-wrap gap-2 px-4 px-lg-0">
-											<div class="d-flex flex-column flex-lg-row gap-2">
-												<a class="btn btn-sm btn-light-primary fw-bolder" href="../../demo20/dist/apps/ecommerce/catalog/products.html">eCommerce</a>
-												<a class="btn btn-sm btn-light-danger fw-bolder" href="../../demo20/dist/apps/file-manager/folders.html">File Manager</a>
-											</div>
-											<div class="d-flex flex-column flex-lg-row gap-2">
-												<a class="btn btn-sm btn-light-info fw-bolder" href="../../demo20/dist/apps/subscriptions/view.html">More Apps</a>
-											</div>
-										</div>
-										<!--end::Wrapper-->
-									</div>
-									<!--end::Tab panel-->
-									<!--begin::Tab panel-->
-									<div class="tab-pane fade" id="kt_header_navs_tab_5">
-										<!--begin::Wrapper-->
-										<div class="d-flex flex-column flex-lg-row flex-lg-stack flex-wrap gap-2 px-4 px-lg-0">
-											<div class="d-flex flex-column flex-lg-row gap-2">
-												<a class="btn btn-sm btn-light-primary fw-bolder" href="../../demo20/dist/documentation/getting-started.html">Documentation</a>
-												<a class="btn btn-sm btn-light-success fw-bolder" href="../../demo20/dist/documentation/getting-started/video-tutorials.html">Video Tutorials</a>
-												<a class="btn btn-sm btn-light-danger fw-bolder" href="https://preview.keenthemes.com/metronic8/demo20/layout-builder.html">Layout Builder</a>
-											</div>
-											<div class="d-flex flex-column flex-lg-row gap-2">
-												<a class="btn btn-sm btn-light-info fw-bolder" href="../../demo20/dist/documentation/getting-started/changelog.html">Changelog</a>
-											</div>
 										</div>
 										<!--end::Wrapper-->
 									</div>
@@ -235,62 +204,15 @@
 								<!--begin::Card header-->
 								<div class="card-header">
 									<h3 class="card-title align-items-start flex-column">
-										Lista e Anetareve
+										Votat e Kandidateve per Kryetar
 									</h3>
 								</div>
 								<!--end::Card header-->
 								<!--begin::Card body-->
 								<div class="card-body">
-                                    <form id="shtoAnetarinForm">
-                                        <div class="row">
-                                            <div class="col-lg-6">
-                                                <div class="form-group mb-5">
-                                                    <label>Emri Mbiemri</label>
-                                                    <input type="text" class="form-control" id="memberName" placeholder="Emri Mbiemri">
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group mb-5">
-                                                    <label>Partia</label>
-                                                    <select class="form-control" id="memberParty">
-                                                    </select> 
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-12">
-                                                <div class="form-group mb-5">
-                                                    <label>Foto URL</label>
-                                                    <input type="text" class="form-control" id="memberFoto" placeholder="URL">
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group mb-5">
-                                                    <label>Data e lindjes</label>
-                                                    <input class="form-control" placeholder="Zgjedh nje date" id="datePicker"/>
-                                                </div>
-                                            </div>
-                                            <div class="col-lg-6">
-                                                <div class="form-group mb-5">
-                                                    <label>Vendi i lindjes</label>
-                                                    <input type="text" class="form-control" id="memberBirthPlace" placeholder="Vendi i lindjes">
-                                                </div>
-                                            </div>
-											<div class="col-lg-6">
-												<div class="form-group">
-													<div class="form-check form-switch form-check-custom form-check-solid">
-														<input class="form-check-input" type="checkbox" id="isCandidate" />
-														<label class="form-check-label" for="flexSwitchChecked">
-															A eshte kandidat
-														</label>
-													</div>
-												</div>
-											</div>
-                                            <div class="col-lg-6 text-end">
-                                                <button type="submit" class="btn btn-sm btn-primary">
-                                                    Ruaj
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </form>
+                                    <div id="chart">
+
+                                    </div>
 								</div>
 								<!--end::Card body-->
 							</div>
@@ -343,7 +265,7 @@
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
 		<!--end::Page Vendors Javascript-->
 		<!--end::Javascript-->
-		<script src="js/shtoAnetarin.js"></script>
+		<script src="js/kandidatet.js"></script>
 	</body>
 	<!--end::Body-->
 </html>
