--- a/eVotingUI/contact.html
+++ b/eVotingUI/contact.html
@@ -89,21 +89,21 @@
     <div id="contactForm">
       <h3>Na kontaktoni</h3>
       <div class="sepContainer"></div>
-      <form action="process.php" method="post" id="contact_form">
+      <form id="contact_form">
         <div class="name">
           <label for="name">Emri:</label>
           <p> Ju lutem shënoni emrin më poshtë:</p>
-          <input id=name name=email type=text placeholder="e.g. Mr. Dion Kuka" required />
+          <input id=name type=text placeholder="e.g. Mr. Dion Kuka" required />
         </div>
         <div class="email">
           <label for="email">Email:</label>
           <p> Ju lutem shënoni email më poshtë: </p>
-          <input id=email name=email type=email placeholder="dionkuka@gmail.com" required />
+          <input id=email type=email placeholder="kukadion1@gmail.com" required />
         </div>
         <div class="message">
           <label for="message">Mesazhi juaj:</label>
           <p> Ju lutem shënoni pyetjen tuaj më poshtë:</p>
-          <textarea id=message name=message rows=6 cols=10 required></textarea>
+          <textarea id=message rows=6 cols=10 required></textarea>
         </div>
         <div id="loader">
           <button type="submit" class="btn btn-info">Submit</button>
@@ -114,9 +114,6 @@
   </div>
 </div>
 <div class="blankSeparator"></div>
-
-<!-- Socialize ==================================================
-================================================== -->
 <hr class="separator2">
 <div class="socialsblock">
   <div class="container socialize">
@@ -186,26 +183,9 @@
   <div class="container">
     <p class="copyright">&copy; Copyright 2022.</p>
   </div>
-  <!-- container ends here --> 
 </div>
-<!-- copyright ends here --> 
-<!-- End Document
-================================================== --> 
-<!-- Scripts ==================================================
-================================================== --> 
 <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script> 
-<!-- Main js files --> 
-<script src="js/screen.js" type="text/javascript"></script> 
-<!-- Tabs --> 
-<script src="js/tabs.js" type="text/javascript"></script> 
-<!-- Include prettyPhoto --> 
-<script src="js/jquery.prettyPhoto.js" type="text/javascript"></script> 
-<!-- Include Superfish --> 
-<script src="js/superfish.js" type="text/javascript"></script> 
-<script src="js/hoverIntent.js" type="text/javascript"></script> 
-<!-- Flexslider --> 
-<script src="js/jquery.flexslider-min.js" type="text/javascript"></script> 
 <!-- Modernizr --> 
-<script type="text/javascript" src="js/modernizr.custom.29473.js"></script>
+<script type="text/javascript" src="js/contact.js"></script>
 </body>
 </html>
