--- a/eVotingUI/about.html
+++ b/eVotingUI/about.html
@@ -26,6 +26,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" id="visited">About</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="Vote.html">Vote</a></li>
         </ul>
       </div>
       <!-- mainmenu ends here --> 
@@ -37,6 +38,7 @@
           <option value="index.html">Home</option>
           <option value="about.html">About</option>
           <option value="contact.html">Contact</option>
+          <option><a href="Vote.html">Vote</a></option>
         </select>
       </form>
     </div>
