--- a/eVotingUI/index.html
+++ b/eVotingUI/index.html
@@ -36,6 +36,7 @@
           <li><a href="index.html" id="visited">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="Vote.html">Vote</a></li>
         </ul>
       </div>
       <!-- mainmenu ends here --> 
@@ -47,6 +48,8 @@
           <option value="index.html">Home</option>
           <option value="about.html">About</option>
           <option value="contact.html">Contact</option>
+          <option><a href="Vote.html">Vote</a></option>
+
         </select>
       </form>
     </div>
