--- a/eVotingUI/Vote.html
+++ b/eVotingUI/Vote.html
@@ -39,9 +39,10 @@
       <div class="mainmenu">
         <div id="mainmenu">
           <ul class="sf-menu">
-            <li><a href="index.html" id="visited">Vote</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" id="visited">Vote</a></li>
           </ul>
         </div>
         <!-- mainmenu ends here -->
