--- a/eVotingUI/contact.html
+++ b/eVotingUI/contact.html
@@ -35,6 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html" id="visited">Contact</a></li>
+            <li><a href="Vote.html">Vote</a></li>
           </ul>
         </div>
         <form id="responsive-menu" action="#" method="post">
