--- a/eVotingUI/shtoAnetare.html
+++ b/eVotingUI/shtoAnetare.html
@@ -64,7 +64,7 @@
 										</button>
 										<!--end::Heaeder navs toggle-->
 										<!--begin::Logo-->
-										<a href="../../demo20/dist/index.html" class="d-flex align-items-center">
+										<a href="/index.html" class="d-flex align-items-center">
 											<img alt="Logo" src="images/kqzLogo.png" class="h-45px h-lg-50px" />
 										</a>
 										<!--end::Logo-->
