--- a/eVotingUI/Login.html
+++ b/eVotingUI/Login.html
@@ -49,6 +49,6 @@
 	</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+<script src="js/login.js"></script>
 </body>
 </html>
