--- a/eVotingUI/about.html
+++ b/eVotingUI/about.html
@@ -26,7 +26,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" id="visited">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="Vote.html">Vote</a></li>
+          <li class="voteMenu"><a href="Vote.html">Vote</a></li>
         </ul>
       </div>
       <!-- mainmenu ends here --> 
@@ -38,7 +38,7 @@
           <option value="index.html">Home</option>
           <option value="about.html">About</option>
           <option value="contact.html">Contact</option>
-          <option><a href="Vote.html">Vote</a></option>
+          <option class="voteMenu"><a href="Vote.html">Vote</a></option>
         </select>
       </form>
     </div>
@@ -241,5 +241,6 @@
 <script src="js/jquery.flexslider-min.js" type="text/javascript"></script> 
 <!-- Modernizr --> 
 <script type="text/javascript" src="js/modernizr.custom.29473.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
