--- a/eVotingUI/contact.html
+++ b/eVotingUI/contact.html
@@ -35,7 +35,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html" id="visited">Contact</a></li>
-            <li><a href="Vote.html">Vote</a></li>
+            <li class="voteMenu"><a href="Vote.html">Vote</a></li>
           </ul>
         </div>
         <form id="responsive-menu" action="#" method="post">
@@ -44,6 +44,7 @@
             <option value="index.html">Home</option>
             <option value="about.html">About</option>
             <option value="contact.html">Contact</option>
+            <option class="voteMenu" value="Vote.html">Vote</option>
           </select>
         </form>
       </div>
@@ -187,6 +188,7 @@
 </div>
 <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script> 
 <!-- Modernizr --> 
+<script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/contact.js"></script>
 </body>
 </html>
